# ops-spherical-harmonics

./: .gitignore  CMakeLists.txt  Comparison.xlsx  PointCloudSH.cxx  README.md  TestSHE.cxx  TestSHTNS.cxx  Wrapper.f95
